# BabyBird

./: CMakeLists.txt
src/: Entity.h  Game.cpp  Game.h
src/Animation/: Animation.cpp  Animation.h
src/Components/: InputComponent.h  PositionComponent.h  SpriteComponent.h  VelocityComponent.h
src/Systems/: InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SpawnerSystem.cpp  SpawnerSystem.h  System.h
